# NovaData_consulting

./: 1. Portfolio‑Ready.ipynb  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
dashboards/slide/: presentation.txt
dashboards/tableau/: Dashboard.txt  NovaData_Consulting_uci_segmentation.twb  loan_segment_summary.csv  uci_segment_summary.csv  ~NovaData_Consulting_uci_segmentation__31872.twbr
notebooks/: Train_evaluate_model.py  explore_clean_data_davy-Copy1.ipynb  explore_clean_data_davy.ipynb  explore_clean_loan_data_davy.ipynb  explore_fi_clean_uci_data_davy.ipynb  functions.py  h3_segmentation.ipynb  indicators_age.csv  indicators_chomage.csv  indicators_logement.csv  indicators_revenu.csv  insee_api_functions.py  load_and_clean_uci_data_davy.csv  load_and_clean_uci_data_davy.ipynb  load_clean_loan_data_davy.ipynb
notebooks/.ipynb_checkpoints/: explore_clean_data_davy-Copy1-checkpoint.ipynb  explore_clean_data_davy-checkpoint.ipynb  explore_clean_loan_data_davy-checkpoint.ipynb  explore_fi_clean_uci_data_davy-checkpoint.ipynb  functions-checkpoint.py  h3_segmentation-checkpoint.ipynb  indicators_education-checkpoint.csv  load_clean_loan_data_davy-checkpoint.ipynb
sql_scripts/: 01_uci_schema_creation.sql.sql  02_uci_segmentation.sql.sql  Segmentation_project.sql
