[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.4",
    "datetime>=6.0",
    "dotenv>=0.9.9",
    "imbalanced-learn>=0.14.1",
    "importlib>=1.0.4",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "optuna>=4.7.0",
    "pandas>=3.0.0",
    "pillow>=12.1.0",
    "pymysql>=1.1.2",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "xgboost>=3.1.3",
]
